@@ -5,11 +5,13 @@ Initial Port to Minecraft 1.8.9 as a rewrite (and I rewrote *a lot*)
 
 Additions (in relation to 1.7.10 - 1.2.15)
 - The upgrades now have a certain (configurable) minimum tier of backpack they can be applied to.
+- When removing an upgrade you now get said upgrade returned back in the crafting grid, much like how you get empty buckets back when crafting a cake.
+- The void filter is now an additional selectable filter type in the advanced filter.
 - You can crouch while opening an equipped backpack to open up the equipped backpack's alternate gui directly.
 - Config option to make the backpack no longer renders on the client if the player is in first person perspective
 
 Changes (in relation to 1.7.10 - 1.2.15)
-- Made the mod significantly easier to get into in regards to recipes (i.e easier (in terms of resources needed) recipes).
+- Made the mod significantly easier to get into in regards to recipes/resource costs.
 - The entire mod now takes substantially less Item IDs!
     - 4 for the backpacks (each one is still a separate item), 1 for all the upgrades, and 1 for all the crafting items.
 - Default keybinding to open backpack is 'c' and to equip is now 'v'.
